--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--  ICONS -->
+    <link rel="stylesheet" href="assets/style.css" />
+
+    <!-- FONTS -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +21,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">beauty<span>salon.</span></a>
         <div class="menu">
           <ul class="grid">
@@ -26,8 +32,8 @@
             <li><a class="tittle" href="#contact">Contato</a></li>
           </ul>
         </div>
-        <div class="open">...</div>
-        <div class="close">x</div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -62,5 +68,7 @@
         <div class="container grid">Services</div>
       </section>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
