--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <title>OriginSix</title>
   </head>
   <body>
-    <header id="header">
+    <header id="header" class="">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon.</span></a>
         <div class="menu">
           <ul class="grid">
-            <li><a class="tittle" href="#home">Ínicio</a></li>
-            <li><a class="tittle" href="#about">Sobre</a></li>
-            <li><a class="tittle" href="#services">Serviços</a></li>
-            <li><a class="tittle" href="#testimonials">Depoimentos</a></li>
-            <li><a class="tittle" href="#contact">Contato</a></li>
+            <li><a class="title" href="#home">Ínicio</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
         <div class="toggle icon-menu"></div>
@@ -61,11 +61,84 @@
       <div class="divider-1"></div>
 
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="tres mulheres com acessórios de cabelo nas maos"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre Nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores,
+              hic amet! Quia voluptatum ab, sed perferendis facere sapiente
+              recusandae alias tempora atque aliquam autem odio. Ducimus error
+              aut mollitia in?
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+              officiis! Asperiores possimus in quibusdam aliquid eaque accusamus
+              autem pariatur suscipit, repellendus magnam reprehenderit!
+              Assumenda, nam modi? Nobis animi repellendus blanditiis.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel
+              autem maiores, ducimus dolores at eveniet adipisci quia pariatur
+              fuga ad voluptate ipsum. Possimus ipsum quae corporis at, ea
+              aspernatur. Architecto!
+            </p>
+          </div>
+        </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <section class="section" id="services">
-        <div class="container grid">Services</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
+              conquistou clientes de inúmeros países com seus tratamentos
+              exclusivos e totalmente naturais
+            </p>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia Capilar</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Eveniet, totam omnis voluptatibus quis magni corporis ea
+                voluptatem ipsam dolore eum deserunt vitae, rerum, temporibus
+                neque ipsum sapiente deleniti nisi sit?
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem tempore nesciunt cum nostrum ducimus quidem tempora
+                eum labore esse molestias expedita magnam repudiandae, eveniet
+                dolorem iure nemo reiciendis mollitia? Nisi!
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos
+                voluptatibus autem obcaecati ipsa molestiae id, delectus aliquam
+                illum tempora libero, eveniet iste veritatis dolore praesentium
+                voluptatum dolorem hic? Adipisci, quas.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
