--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <!--  ICONS -->
     <link rel="stylesheet" href="assets/style.css" />
 
+    <!-- SWIPER -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+    />
+
     <!-- FONTS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -17,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <title>OriginSix</title>
   </head>
   <body>
@@ -38,6 +45,7 @@
     </header>
 
     <main>
+      <!-- HOME -->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -60,6 +68,7 @@
 
       <div class="divider-1"></div>
 
+      <!-- ABOUT -->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -96,6 +105,7 @@
 
       <div class="divider-2"></div>
 
+      <!-- SERVICES -->
       <section class="section" id="services">
         <div class="container grid">
           <header>
@@ -140,8 +150,130 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
+
+      <!-- TESTIMONIALS -->
+      <section class="section" id="testimonials">
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Veniam ipsum earum voluptatibus, quibusdam id adipisci modi
+                    praesentium distinctio sapiente sequi, dolorum at quae,
+                    explicabo itaque quidem odio autem ex cum?
+                  </p>
+                  <cite>
+                    <img src="assets/images/user-1.jpg" alt="Foto de Wanessa" />
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Veniam ipsum earum voluptatibus, quibusdam id adipisci modi
+                    praesentium distinctio sapiente sequi, dolorum at quae,
+                    explicabo itaque quidem odio autem ex cum?
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/images/user-2.jpg"
+                      alt="Foto de Franciele"
+                    />
+                    Franciele Vieira
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Veniam ipsum earum voluptatibus, quibusdam id adipisci modi
+                    praesentium distinctio sapiente sequi, dolorum at quae,
+                    explicabo itaque quidem odio autem ex cum?
+                  </p>
+                  <cite>
+                    <img src="assets/images/user-3.jpg" alt="Foto de Andrea" />
+                    Andrea Karla
+                  </cite>
+                </blockquote>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-2"></div>
+
+      <!-- CONTACT -->
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente.</h2>
+            <p>
+              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              ouvir suas críticas e sugestões.
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário."
+              class="button"
+              target="_blank"
+            >
+              <i class="icon-whatsapp"></i>
+              Entrar em contato
+            </a>
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"></i>11 99845-6754</li>
+              <li><i class="icon-map-pin"></i>R. Amauri Souza, 346</li>
+              <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
 
+    <footer>
+      <div class="container grid">
+        <div class="logo">
+          <h2>beauty<span>salon</span>.</h2>
+
+          <p class="text">
+            &copy2021 Beautysalon.<br />
+            Todos os direitos reservados.
+          </p>
+        </div>
+        <div class="icon">
+          <i class="icon-instagram"></i>
+          <i class="icon-facebook"></i>
+          <i class="icon-youtube"></i>
+        </div>
+      </div>
+    </footer>
+
+    <!-- SWIPER JS -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!-- SCROLL REVEAL -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- MAIN JS -->
     <script src="main.js"></script>
   </body>
 </html>
