--- a/index.html
+++ b/index.html
@@ -247,25 +247,34 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
 
-    <footer>
+    <footer class="section">
       <div class="container grid">
-        <div class="logo">
-          <h2>beauty<span>salon</span>.</h2>
-
-          <p class="text">
-            &copy2021 Beautysalon.<br />
-            Todos os direitos reservados.
-          </p>
+        <div class="brand">
+          <a href="#home" class="logo logo-alt">beauty<span>salon</span>.</a>
+          <p>&copy2021 Beautysalon.</p>
+          <p>Todos os direitos reservados.</p>
         </div>
-        <div class="icon">
-          <i class="icon-instagram"></i>
-          <i class="icon-facebook"></i>
-          <i class="icon-youtube"></i>
+        <div class="social">
+          <a href="https://instagram.com/" target="blank"
+            ><i class="icon-instagram"></i
+          ></a>
+          <a href="https://facebook.com/" target="blank"
+            ><i class="icon-facebook"></i
+          ></a>
+          <a href="https://youtube.com/" target="blank"
+            ><i class="icon-youtube"></i
+          ></a>
         </div>
       </div>
     </footer>
+
+    <a href="#home" class="back-to-top">
+      <i class="icon-arrow-up"></i>
+    </a>
 
     <!-- SWIPER JS -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
