--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
             </p>
-            <a class="button" href="">Agendar um horário</a>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário."
+              class="button"
+              target="_blank"
+            >
+              <i class="icon-whatsapp"></i>
+              Agende seu horário
+            </a>
           </div>
         </div>
       </section>
@@ -241,8 +248,14 @@
           <div class="links">
             <ul class="grid">
               <li><i class="icon-phone"></i>11 99845-6754</li>
-              <li><i class="icon-map-pin"></i>R. Amauri Souza, 346</li>
-              <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+              <li>
+                <a
+                  href="https://www.google.com/maps/place/R.+Amauri+de+Souza,+346+-+Santa+Teresinha+de+Piraci,+Piracicaba+-+SP/data=!4m2!3m1!1s0x94c634f201ca926f:0x633f7ed31478ac48?sa=X&ved=2ahUKEwjdn7jCoaTzAhX1HLkGHZLLAzEQ8gF6BAgOEAE"
+                  target="blank"
+                  ><i class="icon-map-pin"></i>R. Amauri Souza, 346</a
+                >
+              </li>
+              <li><a href="mailto:someone@microsoft.com?subject=Agendamento%20de%20horário"><i class="icon-mail"></i>contato@beautysalon.com</li></a>
             </ul>
           </div>
         </div>
